[workspace]
resolver = "2"
members = ["crates/imgx-vips", "crates/imgx"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1

# For profiling with samply (`cargo build --profile profiling -p imgx`,
# then `samply record ./target/profiling/imgx`): same optimizations as
# release, but with full debug info for symbolication. Kept separate from
# `release` so the shipped Docker image isn't bloated with debug sections.
[profile.profiling]
inherits = "release"
debug = true
strip = false
