[workspace]
resolver = "3"
members = ["crates/imgx-vips", "crates/imgx", "crates/imgx-edge"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.96"

[profile.release]
lto = true
codegen-units = 1
strip = true

# For profiling with samply (`cargo build --profile profiling -p imgx`,
# then `samply record ./target/profiling/imgx`): same optimizations as
# release, but with full debug info for symbolication. Kept separate from
# `release` so the shipped Docker image isn't bloated with debug sections.
[profile.profiling]
inherits = "release"
debug = true
strip = false
