[package]
name = "imgx"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "imgx"
path = "src/main.rs"

[lib]
name = "imgx"
path = "src/lib.rs"

[dependencies]
imgx-vips = { path = "../imgx-vips" }
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal", "sync"] }
lru = "0.12"
parking_lot = "0.12"
rusty-s3 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
axum = "0.8"
tower = { version = "0.5", features = ["util", "limit", "load-shed"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde_json = "1"

[dev-dependencies]
time = "0.3"

